@@ -73,7 +73,7 @@ public class LobbyServerProperties
 		final HostConfiguration config = client.getHostConfiguration();
 		config.setHost(url.getHost());
 		// add the proxy
-		// GameRunner2.addProxy(config); // since lobby actually uses a different port, we should not use a proxy for the properties file until we allow the lobby to accept proxy connections
+		// GameRunner2.addProxy(config); // since lobby actually uses a different port and connection type (TCP), we should not use a proxy for the properties file until we allow the lobby to accept proxy connections
 		
 		final GetMethod method = new GetMethod(url.getPath());
 		// pretend to be ie
