@@ -1,4 +1,6 @@
 Changes for 1.7
+* Created a notification to the user when they start TripleA that checks if their TripleA is the latest version, and if not asks them to update it. (veqryn)
+
 * Created a notification to the user when they click "list games" that will alert them to which maps they already have which may be out of date and need updating. (veqryn)
 
 * Added the default map downloader xml web link to the download maps feature, if the user does not already have any. (veqryn)
